<resources>
    <string name="app_name">Gallery</string>
    <string name="action_settings">Settings</string>
    <string name="thumbnail">thumbnail</string>
    <string name="title_activity_viewer">Gallery</string>
    <string name="about_key" translatable="false">about_key</string>
    <string name="about">About</string>
    <string name="version_key" translatable="false">version_key</string>
    <string name="version">Version</string>
    <string name="developer">Developer</string>
    <string name="developer_summary" translatable="false">tianyu &lt;xdtianyu@gmail.com&gt;</string>
    <string name="developer_key" translatable="false">developer_key</string>
    <string name="project_url" translatable="false">https://github.com/xdtianyu/Gallery</string>
    <string name="project_title">Open source project</string>
    <string name="license">License</string>
    <string name="advanced_key" translatable="false">advanced_key</string>
    <string name="advanced">Advanced</string>
    <string name="force_chinese_key" translatable="false">force_chinese_key</string>
    <string name="force_chinese">Use Chinese as app language</string>
    <string name="catch_crash_key" translatable="false">catch_crash_key</string>
    <string name="catch_crash">Report crashes</string>
    <string name="catch_crash_message">This feature allows the app to report technical details to the developer after crash. Please notice that it is not necessary to enable this if you downloaded the app from Play Store, you only need to tap on "Report" button after crash.</string>
    <string name="customactivityoncrash_error_activity_close_app">Close app</string>
    <string name="customactivityoncrash_error_activity_error_details">Error details</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">Error information</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Close</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Copied to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Copy to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Error details</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">An unexpected error occurred.\nSorry for the inconvenience.</string>
    <string name="customactivityoncrash_error_activity_restart_app">Restart app</string>
    <string name="customactivityoncrash_error_activity_unknown_exception">Unknown exception</string>
    <string name="add_server">Add server</string>
    <string name="uri">Server uri</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_server_help">Help</string>
    <string name="transition_thumbnail" translatable="false">transition:THUMBNAIL</string>
    <string name="data_source">Data source</string>
    <string name="server">Server</string>
</resources>
