<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/apk/res-auto">
    <com.jenzz.materialpreference.PreferenceCategory
        android:key="@string/about_key"
        android:title="@string/about">

        <com.jenzz.materialpreference.Preference
            android:key="@string/version_key"
            android:title="@string/version"/>

        <com.jenzz.materialpreference.Preference
            android:key="@string/developer_key"
            android:summary="@string/developer_summary"
            android:title="@string/developer"/>

        <com.jenzz.materialpreference.Preference
            android:key="project"
            android:summary="@string/project_url"
            android:title="@string/project_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/project_url"/>
        </com.jenzz.materialpreference.Preference>

        <com.jenzz.materialpreference.Preference
            android:key="license"
            android:title="@string/license">
            <intent android:action="org.xdty.gallery.action.VIEW_LICENSES"/>
        </com.jenzz.materialpreference.Preference>

    </com.jenzz.materialpreference.PreferenceCategory>
</PreferenceScreen>